# Thinking-dumps

./: .gitignore  .gitmodules  README.md
7-lang-in-7-wk/ch2-ruby/: RUBY_VERSION  day-1-do.rb  day-1-find-code.rb  day-1-find.md  day-1-try.rb  day-2-do-grep.rb  day-2-do.rb  day-2-find-code.rb  day-2-find.md  day-2-try-2_3_7.rb  day-2-try-mixin.rb  day-2-try-tree.rb  day-2-try.rb  day-3-do.rb  day-3-try.rb  ruby-exercise-csv.txt  rubycsv.txt
7-lang-in-7-wk/ch3-io/: IO_VERSION  day-1-answer-code.io  day-1-answer.md  day-1-do.io  day-1-find.md  day-1-try.io  day-2-do.io  day-2-try-animals.io  day-2-try-fileio.io  day-2-try.io  day-3-coroutine.io  day-3-do-xml.txt  day-3-do.io  day-3-try-actor.io  day-3-try-builder.io  day-3-try-coroutine.io  day-3-try-future.io  day-3-try-phonebook.io  day-3-try-phonebook.txt
7-lang-in-7-wk/ch4-prolog/: PROLOG_VERSION  common.pl  day-1-do.pl  day-1-find.md  day-1-try-food.pl  day-1-try-friends-db.pl  day-1-try-friends-facts.pl  day-1-try-friends-new.pl  day-1-try-friends.pl  day-1-try-friends.prolog  day-1-try-map.pl  day-1-try-ohmy.pl  day-2-do.pl  day-2-find-hanoi-verifier.py  (+13 more)
Isabelle-playground/: BoolExprs.thy  BoolExprs2.thy  CompExps.thy  Playground.thy  ToyList.thy
all-about-monads/: 2_1_type_constructors.hs  2_3_an_example.hs  GHC_VERSION  TUTORIAL_LOCATION
an-intro-to-cat/: an-intro-to-cat.tex  exercise-1-1s.tex  exercise-1-2s.tex
basic-cat/: basic-cat.tex
eopl/: .gitignore  TODO.md  common.rkt  exercise-answers.tex  template.rkt  to-racket.sh
essentials-of-programming-languages/: ch01-exercises.tex  ch02-exercises.tex  ch03-exercises.tex  common.rkt  ex-1.13.rkt  ex-1.17.rkt  ex-1.19.rkt  ex-1.20.rkt  ex-1.22.rkt  ex-1.23.rkt  ex-1.24.rkt  ex-1.25.rkt  ex-1.27.rkt  ex-1.29.rkt  ex-1.30.rkt  ex-1.31.rkt  ex-1.32.rkt  ex-1.33.rkt  ex-1.34.rkt  ex-1.36.rkt  ex-1.7.rkt  ex-1.8.rkt  ex-2.1.rkt  ex-2.10.rkt  ex-2.11.rkt  ex-2.13.rkt  ex-2.15-test.rkt  ex-2.15.rkt  ex-2.17.rkt  ex-2.18.rkt  ex-2.20.rkt  ex-2.21.rkt  ex-2.23.rkt  ex-2.26.rkt  ex-2.28.rkt  ex-2.29.rkt  ex-2.3.md  ex-2.3.rkt  ex-2.31.rkt  ex-2.5.rkt  (+9 more)
exercism/: .gitignore
ghc/: .gitignore  T15932.md
h-99/: BinaryTree.hs  DisjointSet.hs  DisjointSetState.hs  DisjointSetTest.hs  Graph.hs  Leftist.hs  MTree.hs  Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs  Problem06.hs  Problem07.hs  Problem08.hs  Problem09.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem15.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem19.hs  Problem20.hs  Problem21.hs  Problem22.hs  Problem23.hs  Problem24.hs  Problem25.hs  Problem26.hs  Problem27.hs  Problem28.hs  Problem31.hs  Problem32.hs  Problem33.hs  Problem34.hs  Problem35.hs  (+86 more)
javascript-algorithms/: README.md  avl-tree.js  binary-heap.js  binary-search.js  dijkstra.js  floyd-warshall.js  knuth-morris-pratt.js  leftist-tree.js
learnyounode/: baby-steps.js  filtered-ls.js  http-client.js  http-collect.js  http-file-server.js  http-json-api-server.js  http-uppercaser.js  juggling-async.js  make-it-modular-m.js  make-it-modular.js  my-first-async-io.js  my-first-io.js  time-sever.js
lex-yacc-tutorial/: .gitignore  LEX_VERSION  README.md
monadic-parser-combinators/: mpc.hs
paper-and-tutorial/diagrams-playground/: .gitignore  LICENSE  diagrams-playground.cabal
paper-and-tutorial/diagrams-playground/src/: Arrow.hs  Main.hs  TrailsAndPaths.hs  Types.hs  VectorsAndPoints.hs
pcph-learn/: .gitignore  README.md  pcph-learn.cabal  stack.yaml
programming-fs/: .gitignore  FSHARP_VERSION  template_i.fs
pure-functional-data-structures/: Ch02.md
purely-functional-data-structures/: Ch02.md  Ch02BST.hs  Ch02Exercise1.hs  Ch02Exercise2.hs  Ch02Exercise3.hs  Ch02Exercise4.hs  Ch02Exercise5.hs  Ch02Exercise6.hs  Ch03.md  Ch03Binomial.hs  Ch03BinomialTest.hs  Ch03Binominal.hs  Ch03BinominalTest.hs  Ch03Exercise1.md  Ch03Exercise10.hs  Ch03Exercise2.hs  Ch03Exercise3.hs  Ch03Exercise4.hs  Ch03Exercise5.hs  Ch03Exercise6.hs  Ch03Exercise7.hs  Ch03Exercise9.hs  Ch03Exercise9Alt.hs  Ch03Leftist.hs  Ch03RedBlack.hs  Ch03RedBlackTest.hs  Ch04.md  Ch04Exercise2.hs  Ch05.md  Ch05Exercise1.hs  Ch05Exercise1Test.hs  Ch05Exercise4.hs  Ch05Exercise4Test.hs  Ch05Exercise7.hs  Ch05Exercise7Test.hs  Ch05PairingHeap.hs  Ch05PairingHeapTest.hs  Ch05Queue.hs  Ch05QueueTest.hs  Ch05Splay.hs  (+2 more)
seven-more-languages/: README.md
sicp/: .gitignore  RACKET_VERSION  README.md  template.scm
sicp/ch05/exercise_5_51/: .gitignore  CMakeLists.txt  Common.h  DynArr.c  DynArr.h  Environment.c  Environment.h  EvalApp.c  EvalApp.h  EvalCond.c  EvalCond.h  EvalLet.c  EvalLet.h  EvalSeq.c  EvalSeq.h  EvalSetDefine.c  EvalSetDefine.h  EvalSimple.c  EvalSimple.h  Evaluate.c  Evaluate.h  Frame.c  Frame.h  FunctionObject.c  FunctionObject.h  InitEnv.c  InitEnv.h  Machine.c  Machine.h  ManagedSExp.c  ManagedSExp.h  Parser.c  Parser.h  PointerManager.c  PointerManager.h  Primitives.c  Primitives.h  README.md  Register.c  Register.h  (+23 more)
sicp/ch05/exercise_5_51/tests/: CMakeLists.txt  DynArrTests.c  EnvironmentTests.c  EvalAppTests.c  EvalCondTests.c  EvalSeqTests.c  EvalSetDefineTests.c  EvalSimpleTests.c  FirstCheck.c  FrameTests.c  PointerManagerTests.c  PrimitivesTests.c  RunUnitTests.c  SExpTests.c
software-foundations/: .gitignore  Auto.v  Basics.v  Hoare.v  Hoare2.v  HoareList.v  Imp.v  ImpCEvalFun.v  Induction.v  LibTactics.v  Lists.v  MoreCoq.v  MoreInd.v  MoreProp.v  MoreStlc.v  Norm.v  Poly.v  Preface.v  Prop.v  README.md  RecordSub.v  References.v  Smallstep.v  Stlc.v  StlcProp.v  Sub.v  Symbols.v  UseAuto.v  UseTactics.v
t-y-scheme/: SCHEME_VERSION
the-haskell-school-of-music/: .ghci  .gitignore  .hlint.yaml  README.md  package.yaml  stack.yaml  start-midi.sh
the-little-typer/: ch01.md  ch02.md  ch02.pie  ch02.rkt  ch03.rkt  ch04.rkt  ch05.pie  ch05.rkt  ch06.rkt  ch07.pie  ch08.rkt  ch09.pie  ch09.rkt  ch10.rkt  ch11.rkt  ch12.rkt  ch13.rkt  ch14.rkt  ch15.rkt  ch16.rkt
theorem-proving-in-lean/: .gitignore  README.md  ch_2.lean  ch_3.lean  ch_4.lean  example.lean  leanpkg.toml
ty-scheme/: SCHEME_VERSION
(+2862 files in other folders)
