name:                diagrams-playground
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/diagrams-playground#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable dg-render
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Types
                     , VectorsAndPoints
  build-depends:       base
                     , diagrams
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-cairo
                     , containers
                     , vector
                     , vector-algorithms
                     , MonadRandom
                     , dlist
                     , mtl
                     , split
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/diagrams-playground
